KAS-2944 Fixed z-index issue for legacy vl-alert

--- a/app/styles/custom-application/toast.scss
+++ b/app/styles/custom-application/toast.scss
@@ -1,7 +1,7 @@
 .vl-alert-relative {
   opacity: 0.85;
   position: fixed;
-  z-index: 100;
+  z-index: $z-index-alert-stack; // from au-kaleidos-css
   box-shadow: $au-shadow-small;
 
   animation: fpFadeInLeft 0.3s linear;
